# boarhat

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
contents/character/: lady-nifle.md
data/processed/: characters.json  demon_wedges.json  geniemon.json  weapons.json
data/processed/characters/: berenica_detail.json  daphne_detail.json  fina_detail.json  fushu_detail.json  hellfire_detail.json  hilda_detail.json  kezhou_detail.json  lady-nifle_detail.json  lisbell_detail.json  lynn_detail.json  margie_detail.json  outsider_detail.json  phantasio_detail.json  protagonist_detail.json  psyche_detail.json  randy_detail.json  rebecca_detail.json  rhythm_detail.json  sibylle_detail.json  tabethe_detail.json  truffle-filbert_detail.json  yale-oliver_detail.json  yuming_detail.json  zhiliu_detail.json
data/raw/: character_berenica.html  character_daphne.html  character_fina.html  character_fushu.html  character_hellfire.html  character_hilda.html  character_kezhou.html  character_lady-nifle.html  character_lisbell.html  character_lynn.html  character_margie.html  character_outsider.html  character_phantasio.html  character_protagonist.html  character_psyche.html  character_randy.html  character_rebecca.html  character_rhythm.html  character_sibylle.html  character_tabethe.html  character_truffle-filbert.html  character_yale-oliver.html  character_yuming.html  character_zhiliu.html  characters.html  demon_wedges.html  geniemon.html  weapons.html
src/: main.py
src/boarhat/: __init__.py  cli.py
src/boarhat/models/: __init__.py  character.py  character_detail.py  demon_wedge.py  geniemon.py  weapon.py
src/boarhat/scrapers/: __init__.py  base.py  character.py  character_detail.py  demon_wedge.py  geniemon.py  weapon.py
